--- a/Presentation/Presentation.csproj
+++ b/Presentation/Presentation.csproj
@@ -7,13 +7,19 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FastEndpoints" Version="5.25.0" />
+        <PackageReference Include="FastEndpoints.Security" Version="5.25.0" />
+        <PackageReference Include="FastEndpoints.Swagger" Version="5.25.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.2"/>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Contracts\Requests\" />
-      <Folder Include="Endpoints\" />
     </ItemGroup>
 
     <ItemGroup>
