Create migrations and apply them.

--- a/Presentation/appsettings.json
+++ b/Presentation/appsettings.json
@@ -1,8 +1,6 @@
 {
-  "DatabaseConfiguration": {
-    "ConnectionString": "Initial Catalog=TableTennisLeague;Data Source=localhost;Integrated Security=True",
-    "DefaultSchema": "TableTennisLeague.dbo",
-    "CommandTimeout": 120
+  "ConnectionStrings": {
+    "Database": "Initial Catalog=TableTennisLeague;Data Source=localhost;Integrated Security=True;TrustServerCertificate=True"
   },
   "JwtAuthorizationConfiguration": {
     "IssuerSigningKey": "-+iGXa4b7K:TE4:W3Vd6o#yg)yx4T2Ke"
