--- a/API/API.csproj
+++ b/API/API.csproj
@@ -4,6 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
+        <RootNamespace>Presentation</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -17,10 +18,6 @@
         </PackageReference>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.7" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
-    </ItemGroup>
-
-    <ItemGroup>
-      <Folder Include="Contracts\Requests\" />
     </ItemGroup>
 
     <ItemGroup>
